--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,8 +1,14 @@
 ---
-title: 'All Around Property Solutions LLC | Trusted Handyman & Property Services in Metro Detroit'
-description: 'Discover top rated handyman and property management services in Metro Detroit with All Around Property Solutions LLC. Fully insured, family owned, and Nextdoor Neighborhood Fave. Call 248-875-1272 to schedule today!'
+title: 'Service'
+description: 'Service'
 permalink: 'about/'
+eleventyNavigation:
+    key: About
+    order: 200
+
 ---
+
+
 
 {% extends "layouts/base.html" %}
 
@@ -12,8 +18,6 @@ permalink: 'about/'
 
 {% block body %}
 
-   
-{% include 'components/about_content.html' %}
-{% include 'components/about_content2.html' %}
+
 
 {% endblock %}
