--- a/src/index.html
+++ b/src/index.html
@@ -41,18 +41,22 @@ eleventyNavigation:
 {% include 'components/hero.html' %}
 
 
-{% include 'components/herostats.html' %}
+
 
 {% include 'components/2.html' %}
 {% include 'components/3services.html' %}
+{% include 'components/4_service.html' %}
+{% include 'components/5why.html' %}
+
 
 {% include 'components/cta.html' %}
+
 {% include 'components/steps.html' %}
-{% include 'components/4homegallery.html' %}
 {% include 'components/testimonial.html' %}
 
 {% include 'components/faq.html' %}
-{% include 'components/map.html' %}
 
 {% include 'components/cta.html' %}
+
+{% include 'components/9form.html' %}
     {% endblock %}
