--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: 'Trusted Detroit Roofing Experts | Quality Roof Repair & Replacement'
-description: 'Detroit Roofing Experts provide top-quality roof repair, replacement, and maintenance to protect your home. Trust us for reliable and affordable roofing solutions'
+title: ' Build Smarter, Build Better – St. Louis’ Trusted Commercial Construction Partner | Abstract Construction LLC'
+description: 'Abstract Construction LLC delivers top tier commercial construction, tenant office renovations, and industrial design build services in St. Louis. Transparent pricing, high end craftsmanship, and efficient project completion. Call (618) 771-0767 for a free quote today!'
 permalink: '/'
 eleventyNavigation:
   key: Home
