--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -17,7 +17,13 @@ eleventyNavigation:
 {% endblock %}
 
 {% block body %}
+{% include 'components/about_header.html' %}
 
-
+{% include 'components/about_content1.html' %}
+{% include 'components/5why.html' %}
+{% include 'components/3services.html' %}
+{% include 'components/4_service.html' %}
+{% include 'components/cta.html' %}
+{% include 'components/9form.html' %}
 
 {% endblock %}
