--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
-title: 'Service'
-description: 'Service'
+title: '#1 Commercial Construction Company in St. Louis | Abstract Construction LLC'
+description: 'Looking for expert commercial construction in St. Louis? Abstract Construction LLC specializes in office renovations, commercial remodeling, industrial design build, and building maintenance. Get high end craftsmanship with transparent pricing. Call today for a free quote!'
 permalink: 'about/'
 eleventyNavigation:
     key: About
