--- a/src/content/pages/photos.html
+++ b/src/content/pages/photos.html
@@ -19,15 +19,14 @@ eleventyNavigation:
 {% block body %}
 
 
-{% include 'components/header_gallery.html' %}
 
 
-
-{% include 'components/gallery1.html' %}
+{% include 'components/photos.html' %}
 
 {% include 'components/faq.html' %}
-{% include 'components/map.html' %}
-
+{% include 'components/testimonial.html' %}
+{% include 'components/3services.html' %}
+{% include 'components/4_service.html' %}
 {% include 'components/cta.html' %}
 
 {% endblock %}
