--- a/src/content/pages/photos.html
+++ b/src/content/pages/photos.html
@@ -1,6 +1,6 @@
 ---
-title: 'Service'
-description: 'Service'
+title: 'Project Photo Gallery | Abstract Construction LLC'
+description: 'Explore our portfolio of commercial construction projects, including office renovations, design builds, and remodeling. See how Abstract Construction LLC delivers quality craftsmanship in St. Louis.'
 permalink: 'photos/'
 eleventyNavigation:
     key: Photos
