--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -15,7 +15,10 @@ eleventyNavigation:
 
 {% block body %}
 
-{% include 'components/content_services.html' %}
+{% include 'components/service1_header.html' %}
+{% include 'components/service1_content.html' %}
+{% include 'components/cta.html' %}
+{% include 'components/testimonial.html' %}
    
 
 
