--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -1,6 +1,7 @@
 ---
-title: 'All Around Property Solutions LLC | Trusted Handyman & Property Services in Metro Detroit'
-description: 'Discover top rated handyman and property management services in Metro Detroit with All Around Property Solutions LLC. Fully insured, family owned, and Nextdoor Neighborhood Fave. Call 248-875-1272 to schedule today!'
+title: 'Top Commercial, Industrial & Residential Construction Services in St. Louis | Abstract Construction LLC'
+description: 'Looking for expert commercial construction in St. Louis? Abstract Construction LLC specializes in office renovations, design build projects, remodeling, and maintenance. Quality craftsmanship, efficiency, and transparency. Built to exceed expectations.
+'
 permalink: 'services/'
 eleventyNavigation:
     key: Services
