--- a/src/content/pages/services.html
+++ b/src/content/pages/services.html
@@ -18,6 +18,7 @@ eleventyNavigation:
 
 {% include 'components/service1_header.html' %}
 {% include 'components/service1_content.html' %}
+{% include 'components/5why.html' %}
 {% include 'components/cta.html' %}
 {% include 'components/testimonial.html' %}
    
