--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
-title: 'Tenacious Gutter Systems | Get a Free Quote Today'
-description: ' Reach out to Tenacious Gutter Systems for expert gutter installation, repair, and maintenance in Houston. Call, text, or request a free quote online today!'
+title: ' Abstract Construction LLC | St. Louis Commercial, Industrial, & Residential Construction Experts'
+description: 'Get in touch with Abstract Construction LLC, the trusted name in St. Louis Commercial, Industrial, & Residential Construction. Call or text us 24/7 at (618) 771-0767 or email for a consultation today!'
 permalink: 'contact/'
 eleventyNavigation:
     key: Contact Us
@@ -27,10 +27,15 @@ eleventyNavigation:
 <---          Contact           -->
 <--- -------------------------- -*/
 
+#cs-navigation {
+
+background: var(--headerScroll);
+}
+
   /* Mobile - 360px */
   @media only screen and (min-width: 0rem) {
     #cs-contact-490 {
-      padding: clamp(15.25rem, 15vw, 2.75rem) 2rem;
+      padding: clamp(9.25rem, 15vw, 2.75rem) 2rem;
       padding-bottom: 50px;
     }
 
@@ -100,7 +105,7 @@ eleventyNavigation:
       /* 32px - 52px */
       width: 80px;
       height: 80px;
-      background-color: #000;
+      background-color: var(--primary);
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -136,7 +141,7 @@ eleventyNavigation:
 
     #cs-contact-490 .cs-label {
       /* 14px - 16px */
-      font-size: clamp(0.875rem, 1.3vw, 1rem);
+      font-size: clamp(1.25rem, 1.3vw, 1.2rem);
       line-height: 1.5em;
       font-weight: 700;
       /* 16px - 20px */
@@ -221,11 +226,10 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Contact Info -->
     <div class="cs-content">
-
-      <h2 class="cs-title">Contact Us</h2>
+      <h2 class="cs-topper">Get in touch</h2>
+      <h2 class="cs-title">Contact us today to start your project</h2>
       <span class="cs-text" style="margin-top: 50px;">
-
-Protect your home with the best gutter solutions in Houston. Contact us today for a free estimate!
+        Partner with St. Louis experts in commercial, industrial, & residential construction. Get in touch today for a consultation.
       </span>
       <!--<p class="cs-text">
                 Justo eget magna fermentum iaculis eu non diam phasellus vestibulum. Eu volutpat odio facilisis mauris sit amet massa. Sit amet est placerat in egestas
@@ -238,15 +242,14 @@ Protect your home with the best gutter solutions in Houston. Contact us today fo
             </a>-->
       <!--Email-->
       <span class="cs-title" style="margin-top: 50px; display: block;">Email Us</span>
-      <a href="mailtp:erin@tenaciousgutters.com" class="cs-link">erin@tenaciousgutters.com</a>
+      <a href="mailtp:erin@tenaciousgutters.com" class="cs-link">zach@abstractconstruction.net</a>
       <!--Phone-->
       <span class="cs-title" style="display: block; margin:50px 0px 10px;">Call or Text 24/7</span>
       <a href="tel:{{client.phoneForTel}}" class="cs-title">{{client.phoneFormatted}}</a>
 
       <!--Social Buttons-->
       <div class="cs-social" style="margin: 80px 0px 30px; display: block;">
-        {% include 'components/social-links.html' %}
-
+      
       </div>
     </div>
     <!-- Form -->
@@ -264,10 +267,10 @@ Protect your home with the best gutter solutions in Houston. Contact us today fo
         <input class="cs-input" required type="text" id="phone-490" name="phone" placeholder="">
       </label>
       <label class="cs-label -label-message" style="margin-bottom: 60px;">
-        How can We Help?
+        Project Details
         <textarea class="cs-input" required name="Message" id="message-490" placeholder=""></textarea>
       </label>
-      <button class="cs-button-solid" type="submit">Send</button>
+      <button class="cs-button-solid" type="submit">Send Message</button>
     </form>
   </div>
 </section>
