--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -243,9 +243,9 @@ background: var(--headerScroll);
       <!--Email-->
       <span class="cs-title" style="margin-top: 50px; display: block;">Email Us</span>
       <a href="mailtp:erin@tenaciousgutters.com" class="cs-link">zach@abstractconstruction.net</a>
-      <!--Phone-->
+      <!--Phone-
       <span class="cs-title" style="display: block; margin:50px 0px 10px;">Call or Text 24/7</span>
-      <a href="tel:{{client.phoneForTel}}" class="cs-title">{{client.phoneFormatted}}</a>
+      <a href="tel:{{client.phoneForTel}}" class="cs-title">{{client.phoneFormatted}}</a>->
 
       <!--Social Buttons-->
       <div class="cs-social" style="margin: 80px 0px 30px; display: block;">
