--- a/src/content/pages/qr.html
+++ b/src/content/pages/qr.html
@@ -1,5 +1,5 @@
 ---
-title: 'QR Codes | Tenacious Gutter Systems'
+title: 'QR Codes | Abstract Construction LLC'
 description: 'Your QR Codes'
 permalink: 'qr/'
 
