--- a/src/content/pages/reviewus.html
+++ b/src/content/pages/reviewus.html
@@ -1,6 +1,6 @@
 ---
-title: 'Leave a Review | Tenacious Gutter Systems'
-description: 'Share your experience with Tenacious Gutter Systems! Your feedback helps us continue providing top quality gutter installation, repairs, and maintenance in Houston. Leave a review today!'
+title: 'Leave a Review | Abstract Construction LLC'
+description: 'Your feedback helps us continue providing top quality commercial construction, renovations, and remodeling services in St. Louis and the surrounding area. If we have helped bring your vision to life with expert craftsmanship and seamless project execution, we would love to hear about it!'
 permalink: 'reviewus/'
 
 ---
